--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "sass": "^1.49.9",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
